[package]
name = "muxrpc"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "The muxrpc rpc protocol in rust."
repository = "https://github.com/AljoschaMeyer/muxrpc-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
futures = "0.1.17"
packet-stream = "0.2.0"
tokio-io = "0.1.4"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
