[package]
name = "muxrpc"
version = "0.3.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "The muxrpc rpc protocol in rust."
repository = "https://github.com/AljoschaMeyer/muxrpc-rs"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
atm-async-utils = "0.2.1"
futures-core = "0.2.0-alpha"
futures-io = "0.2.0-alpha"
futures-sink = "0.2.0-alpha"
futures-util = "0.2.0-alpha"
packet-stream = "0.7.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

[dev-dependencies]
futures = "0.2.0-alpha"
async-ringbuffer = "0.3.0"
